--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="enter_notes">Enter Notes</string>
     <string name="notes">Notes</string>
     <string name="lock">Lock</string>
+    <string name="storage_permission_text">This App Needs access to your Storage.</string>
 </resources>
